Defined a file format for execution plans Implemented a parser for it Used reflection to build pipeline as defined by file